bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: snake-arena
    labels:
        com.docker.compose.project: snake-arena
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: snake-arena
        com.docker.compose.service: backend
    ports:
        - name: backend-8000
          port: 8000
          targetPort: backend-8000
