bridge/base/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: snake-arena
    labels:
        com.docker.compose.project: snake-arena
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: snake-arena
        com.docker.compose.service: frontend
    ports:
        - name: frontend-8081
          port: 8081
          protocol: TCP
          targetPort: frontend-5173
